--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -12,7 +12,10 @@ $themes: (
         light-argo-teal-7: $argo-color-teal-7,
         light-argo-teal-5: $argo-color-teal-5,
         pod-cyan: lightcyan,
-        layout-loader-bg: rgba($argo-color-gray-7, 0.4),  
+        layout-loader-bg: rgba($argo-color-gray-7, 0.4),
+        overlay: rgba(222, 222, 222, 0.62),
+        shadow: $argo-color-gray-5,
+        border: $argo-color-gray-3
     ),
     dark: (
         background-1: $dark-theme-background-1,
@@ -26,7 +29,9 @@ $themes: (
         light-argo-teal-5: $argo-color-teal-4,
         pod-cyan: $argo-color-teal-8,
         layout-loader-bg: rgba($argo-color-gray-3, 0.4),
-
+        overlay: rgba(70, 70, 70, 0.62),
+        shadow: $dark-theme-background-1,
+        border: $argo-color-gray-7
     )
 );
 
